fix: z-index for mobile makes me sad

--- a/src/components/styles/Splash.scss
+++ b/src/components/styles/Splash.scss
@@ -53,7 +53,7 @@
   position: absolute;
   right: 64px;
   bottom: 36px;
-  z-index: 2;
+  z-index: 100;
 
   a {
     position: relative;
